# immunization-records-pipeline

./: .dockerignore  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  minnesota-immunization.code-workspace  pyproject.toml  setup_and_run_mac.sh
.devcontainer/: devcontainer.json  immunization-records-pipeline.code-workspace  post-install.sh
.github/: README.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-data-pipeline.yml  deploy.yml  lint-data-pipeline.yml  publish.yml  python-app.yml  python-data-pipeline.yml  python-transform.yml  test-data-pipeline.yml
config/: config.json.example
data-pipeline/: .flaker8  README.md  create_dp.py  gui_test.py  pipeline_service.py  pyproject.toml
data-pipeline/config/: logging.dev.ini  logging.prod.ini
data-pipeline/data_pipeline/: __init__.py  __main__.py  aisr.py  cli.py  csv_read.py  data_flow.py  etl_pipeline.py  etl_workflow.py  load.py  main.py  manifest_generator.py  orchestrator.py  pipeline.py  pipeline_factory.py  query.py  transform.py
data-pipeline/data_pipeline/aisr/: actions.py  aisr.py  authenticate.py  query.py
data-pipeline/scripts/: test_run.sh
data-pipeline/tests/: conftest.py  fake_data.py  mock_data.py  mock_server.py  test_app.py  test_csv_read.py  test_data_flow.py  test_etl_pipeline.py  test_extract.py  test_main.py  test_orchestrator.py  test_pipeline.py  test_transform.py  test_utils.py
data-pipeline/tests/integration/: .gitignore  test_auth.py  test_cli.py  test_cli_query.py  test_cli_transform.py  test_query.py  test_test_server.py
data-pipeline/tests/integration/aisr/: __init__.py  test_bulk_query.py  test_extraction.py
data-pipeline/tests/integration/cli/: __init__.py  test_cli_download.py  test_cli_errors.py  test_cli_query.py  test_cli_transform.py
data-pipeline/tests/mock_data/: mock_aisr_download.csv  mock_data_generation.py
data-pipeline/tests/unit/: test_aisr.py  test_etl_pipeline.py  test_extract.py  test_load.py  test_log_analyzer.py  test_main.py  test_pipeline_factory.py  test_transform.py
data-pipeline/tests/unit/aisr/: test_actions.py  test_auth.py  test_query.py
data-transform/: pyproject.toml
data-transform/data_transform/: main.py
data-transform/tests/: test_main.py
function-source/: main.py  requirements.txt
infra/: .terraform.lock.hcl  README.md  district.plan  main.tf  outputs.tf  terraform.tfvars.example  unify.plan  variables.tf
infra/bootstrap/: bootstrap.plan  main.tf  outputs.tf  variables.tf
infra/districts/: isd197.json  sandbox.json.example
infra/docs/: design_philosophy.md
infra/modules/district/: alerts.tf  iam.tf  job.tf  outputs.tf  project.tf  scheduler.tf  secrets.tf  storage.tf  variables.tf
infra/scripts/: setup_google_drive_oauth.py
minnesota-immunization-cli/: README.md  main.py  pyproject.toml
minnesota-immunization-cli/config/: config.json  config.json.example
minnesota-immunization-cli/src/minnesota_immunization_cli/: __init__.py  __main__.py  cli.py  metadata_generator.py
minnesota-immunization-cli/tests/: test_cli.py  test_cli_transform.py  utils.py
minnesota-immunization-cloud/: README.md  config.json.example  main.py  pyproject.toml  requirements.txt
minnesota-immunization-cloud/src/: gcs_helpers.py  main.py  pyproject.toml  requirements.txt  secret_helpers.py
minnesota-immunization-cloud/src/minnesota_immunization_cloud/: __init__.py  cloud_storage.py  google_drive.py  main.py
minnesota-immunization-cloud/tests/: __init__.py  test_cloud.py  test_incremental.py  test_placeholder.py
minnesota-immunization-core/: README.md  pyproject.toml
minnesota-immunization-core/.github/workflows/: publish.yml
minnesota-immunization-core/src/minnesota_immunization_core/: etl_workflow.py  load.py  pipeline_factory.py
minnesota-immunization-core/src/minnesota_immunization_core/aisr/: actions.py
minnesota-immunization-core/tests/: test_core.py  test_pipeline_factory.py
minnesota-immunization-infra/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
minnesota-immunization-infra/scripts/: setup_google_drive_oauth.py
minnesota-immunization-mock/: Dockerfile  README.md  pyproject.toml
minnesota-immunization-mock/src/minnesota_immunization_mock/: __init__.py  main.py  sample_data.py  server.py
minnesota-immunization-mock/terraform/: .gitignore  main.tf  terraform.tfvars.example
mock/: Dockerfile  main.py  pyproject.toml
mock/src/minnesota_immunization_mock/: __init__.py  main.py  sample_data.py  server.py
scripts/: bump_data_pipeline_version.sh  setup_and_run_mac.sh
src/mn_immunization/domain/: ic_format.py  records.py
src/mn_immunization/etl/: etl_workflow.py  pipeline_factory.py
src/mn_immunization/gcp/: storage.py
src/mn_immunization/ledger/: events.py  gcs_ledger.py  memory.py  port.py
src/mn_immunization/pipeline/: cycles.py  execute.py  incremental.py  policy.py  support.py
src/mn_immunization/runtime/: cli.py  cycles.py  files.py  job.py  main.py  metadata_generator.py
src/mn_immunization/runtime/cloud/: main.py  secrets.py
src/mn_immunization/sinks/: drive.py
src/mn_immunization/sources/aisr/: actions.py  authenticate.py  client.py  parsing.py  port.py
terraform/: .terraform.lock.hcl  main.tf
tests/: conftest.py  mock_server.py  test_etl_workflow.py  test_extract.py  test_load.py  test_pipeline_factory.py  test_transform.py
tests/aisr/: test_actions.py  test_auth.py  test_parsing.py
tests/cli/: conftest.py  test_cli_transform.py  utils.py
tests/cloud/: test_incremental.py
tests/domain/: test_ic_format.py  test_records.py
tests/ledger/: test_events.py  test_gcs_ledger.py  test_memory.py
tests/pipeline/: test_claims.py  test_cycle_loop.py  test_import_confirmation.py  test_incremental.py  test_policy.py  test_polling.py  test_sanity_brake.py
tests/runtime/: test_cli.py  test_job.py
tests/runtime_test/: test_job.py  test_polling.py  test_sanity_brake.py
