[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "Transforms immunization records from the Minnesota Department of Health to the format used by Infinite Campus."
authors = ["Dillon O'Leary <dillon.oleary@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pylint = "^3.3.1"
black = "^24.10.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
