[tool.poetry]
name = "data-transform"
version = "0.1.0"
description = "Transforms immunization records from the Minnesota Department of Health to the format used by Infinite Campus."
authors = ["Dillon O'Leary <dillon.oleary@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
