[project]
name = "minnesota-immunization-cloud"
version = "0.1.0"
description = "Cloud function for Minnesota immunization records processing"
readme = "README.md"
authors = [
    { name = "Dillon O'Leary", email = "doleary@wisc.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "google-cloud-storage",
    "requests",
    "functions-framework",
    "minnesota-immunization-core",
    "google-cloud-secret-manager",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.scripts]
minnesota-immunization-cloud = "src.minnesota_immunization_cloud:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "functions-framework",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minnesota_immunization_cloud"]

# Using published PyPI version instead of local path
# [tool.uv.sources]
# minnesota-immunization-core = { path="../minnesota-immunization-core", editable=true }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.uv.workspace]
members = [
    "../minnesota-immunization-mock",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
