[project]
name = "minnesota-immunization-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dillon O'Leary", email = "dillon.oleary@icloud.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
