[project]
name = "minnesota-immunization-core"
version = "0.1.0"
description = "Core library for Minnesota immunization data pipeline"
authors = [{ name = "Dillon O'Leary", email = "dillon.oleary@icloud.com" }]
requires-python = ">=3.11"
dependencies = ["pandas>=2.2.3", "beautifulsoup4>=4.12.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "SIM", "ERA"]
ignore = []
