[project]
name = "minnesota-immunization-mock"
version = "0.1.0"
description = "Mock AISR server for testing Minnesota Immunization Pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.scripts]
mock-server = "minnesota_immunization_mock.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
